style: increase lateral padding to prevent text overlapping with sort caret

--- a/less/current/modules/datatables.less
+++ b/less/current/modules/datatables.less
@@ -1,6 +1,6 @@
 table.dataTable thead {
   th[class*="sorting"] {
-    @inline-padding: 10px;
+    @inline-padding: 15px;
     padding-right: @inline-padding!important;
     padding-left: @inline-padding!important;
     &:after {
